修改用户注册接口、修改配置文件

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,9 @@
 #服务注册eureka时使用ip
 eureka:
   instance:
-    instance-id: ${spring.cloud.client.ipAddress}:${server.post}
+    lease-renewal-interval-in-seconds: 5        #每间隔5s，向服务端发送一次心跳，证明自己依然”存活“
+    lease-expiration-duration-in-seconds: 10    #告诉服务端，如果我10s之内没有给你发心跳，就代表我“死”了，将我踢出掉
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
     ip-address: ${spring.cloud.client.ipAddress}
     prefer-ip-address: true
 spring:
@@ -11,6 +13,6 @@ spring:
 #    active: local
   cloud:
     config:
-      uri: http://haijun:1qaz2wsx@120.79.19.207:2222
+      uri: http://whj:whj13140@120.79.19.207:2222
       label: master
       profile: dev
