--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -30,29 +30,29 @@ spring:
     # 打开PSCache，并且指定每个连接上PSCache的大小
     poolPreparedStatements: true
     maxPoolPreparedStatementPerConnectionSize: 20
-  redis:
-    # Redis数据库索引（默认为0）
-    database: 0
-    # Redis服务器连接密码（默认为空）
-    password:
-    # 服务器地址
-    host: 120.79.19.207
-    port: 6379
-    # 连接超时时间（毫秒）
-    timeout: 0
+#  redis:
+#    # Redis数据库索引（默认为0）
+#    database: 0
+#    # Redis服务器连接密码（默认为空）
+#    password:
+#    # 服务器地址
+#    host: 120.79.19.207
+#    port: 6379
+#    # 连接超时时间（毫秒）
+#    timeout: 0
 # 集群配置
 #    cluster:
 #        nodes: 120.79.19.207:6379
-    lettuce:
-      pool:
-        # 连接池最大连接数（使用负值表示没有限制）
-        max-active: 8
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: 1
-        # 连接池中的最大空闲连接
-        max-idle: 8
-        # 连接池中的最小空闲连接
-        min-idle: 0
+#    lettuce:
+#      pool:
+#        # 连接池最大连接数（使用负值表示没有限制）
+#        max-active: 8
+#        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+#        max-wait: 1
+#        # 连接池中的最大空闲连接
+#        max-idle: 8
+#        # 连接池中的最小空闲连接
+#        min-idle: 0
 mybatis:
   mapperLocations: classpath:mapper/*.xml
   configuration:
