--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.whj</groupId>
 	<artifactId>user-center</artifactId>
-	<version>v1.0.1</version>
+	<version>v1.0.3</version>
 	<packaging>jar</packaging>
 
 	<name>user-center</name>
@@ -98,6 +98,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
