--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.whj</groupId>
 	<artifactId>user-center</artifactId>
-	<version>v1.0.3</version>
+	<version>v1.0.4</version>
 	<packaging>jar</packaging>
 
 	<name>user-center</name>
@@ -84,6 +84,11 @@
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.6</version>
         </dependency>
         <!--myBatis分页-->
         <dependency>
